Inkscape is now able to push data again. Build process modified, you can now build inkscape with ./configure --enable-artivity

--- a/inkscape/Makefile.in
+++ b/inkscape/Makefile.in
@@ -299,6 +299,7 @@ ALL_LINGUAS = @ALL_LINGUAS@
 AMTAR = @AMTAR@
 AM_DEFAULT_VERBOSITY = @AM_DEFAULT_VERBOSITY@
 AR = @AR@
+ARTIVITY_LIBS = @ARTIVITY_LIBS@
 AUTOCONF = @AUTOCONF@
 AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
@@ -382,6 +383,8 @@ LCMS_CFLAGS = @LCMS_CFLAGS@
 LCMS_LIBS = @LCMS_LIBS@
 LD = @LD@
 LDFLAGS = @LDFLAGS@
+LIBARTIVITY = @LIBARTIVITY@
+LIBARTIVITY_PREFIX = @LIBARTIVITY_PREFIX@
 LIBCDR00_CFLAGS = @LIBCDR00_CFLAGS@
 LIBCDR00_LIBS = @LIBCDR00_LIBS@
 LIBCDR01_CFLAGS = @LIBCDR01_CFLAGS@
@@ -407,6 +410,7 @@ LIBWPG_CFLAGS = @LIBWPG_CFLAGS@
 LIBWPG_LIBS = @LIBWPG_LIBS@
 LIPO = @LIPO@
 LN_S = @LN_S@
+LTLIBARTIVITY = @LTLIBARTIVITY@
 LTLIBICONV = @LTLIBICONV@
 LTLIBINTL = @LTLIBINTL@
 LTLIBOBJS = @LTLIBOBJS@
