--- a/Artivity.Api.Model/Artivity.Api.Model.csproj
+++ b/Artivity.Api.Model/Artivity.Api.Model.csproj
@@ -53,7 +53,7 @@
     <Compile Include="ObjectModel\Activities\Undo.cs" />
     <Compile Include="ObjectModel\Activities\Remove.cs" />
     <Compile Include="ObjectModel\Activities\Add.cs" />
-    <Compile Include="OntologyDiscovery.cs" />
+    <Compile Include="Ontologies\Ontologies.i.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -86,7 +86,7 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Semiodesk.Trinity">
-      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.79\lib\Net40\Semiodesk.Trinity.dll</HintPath>
+      <HintPath>..\packages\Semiodesk.Trinity.Core.0.9.91\lib\Net40\Semiodesk.Trinity.dll</HintPath>
     </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -104,5 +104,5 @@
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\Semiodesk.Trinity.Modelling.0.9.87\build\net40\Semiodesk.Trinity.Modelling.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Semiodesk.Trinity.Modelling.0.9.87\build\net40\Semiodesk.Trinity.Modelling.targets'))" />
   </Target>
-  <Import Project="../packages/Semiodesk.Trinity.Modelling.0.9.79/build/net40/Semiodesk.Trinity.Modelling.targets" Condition="Exists('../packages/Semiodesk.Trinity.Modelling.0.9.79/build/net40/Semiodesk.Trinity.Modelling.targets')" />
+  <Import Project="../packages/Semiodesk.Trinity.Modelling.0.9.91/build/net40/Semiodesk.Trinity.Modelling.targets" Condition="Exists('../packages/Semiodesk.Trinity.Modelling.0.9.91/build/net40/Semiodesk.Trinity.Modelling.targets')" />
 </Project>
