--- a/Artivity.Api.Client/src/Makefile.am
+++ b/Artivity.Api.Client/src/Makefile.am
@@ -1,6 +1,6 @@
 nobase_pkginclude_HEADERS = Activity.h  ActivityLog.h  Property.h  PropertyMap.h  PropertyValue.h  Resource.h  Serializer.h UriGenerator.h  XsdTypeMap.h \
 	Activities/Add.h  Activities/Create.h  Activities/Delete.h  Activities/Remove.h  Activities/Undo.h  Activities/Update.h Activities/View.h Activities/Open.h Activities/Close.h Activities/Save.h \
-	Ontologies/as.h	Ontologies/rdf.h Ontologies/xsd.h Ontologies/art.h
+	Ontologies/as.h	Ontologies/rdf.h Ontologies/xsd.h Ontologies/art.h Ontologies/svg.h
 	
 lib_LTLIBRARIES = libartivity.la
 
