--- a/krita/calligra-2.8.1/krita/plugins/extensions/artivity/CMakeLists.txt
+++ b/krita/calligra-2.8.1/krita/plugins/extensions/artivity/CMakeLists.txt
@@ -5,7 +5,8 @@ set(kritabigbrother_PART_SRCS
 
 kde4_add_plugin(kritaartivity ${kritabigbrother_PART_SRCS})
 
-target_link_libraries(kritaartivity kritaui)
+
+target_link_libraries(kritaartivity kritaui artivity)
 
 install(TARGETS kritaartivity DESTINATION ${PLUGIN_INSTALL_DIR})
 
