--- a/Artivity.Api.Http/app.config
+++ b/Artivity.Api.Http/app.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <!--<add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1171;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />-->
-    <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=dotnetrdf" />
+    <add name="virt0" providerName="Semiodesk.Trinity" connectionString="provider=virtuoso;host=localhost;port=1111;uid=dba;pw=dba;rule=urn:semiodesk/ruleset" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
