Restructured REST API: Moved agents into dedicated model. Support for listing agent status via JSON.

--- a/Artivity.Api.Model/Artivity.Api.Model.csproj
+++ b/Artivity.Api.Model/Artivity.Api.Model.csproj
@@ -60,6 +60,7 @@
     <Compile Include="ObjectModel\Activities\Redo.cs" />
     <Compile Include="ObjectModel\Role.cs" />
     <Compile Include="ObjectModel\Entities\WebDataObject.cs" />
+    <Compile Include="Models.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Ontologies\prov.ttl" />
