--- a/Artivity.Api.Client/src/Makefile.am
+++ b/Artivity.Api.Client/src/Makefile.am
@@ -19,6 +19,8 @@ nobase_pkginclude_HEADERS = artivity.h \
     ObjectModel/Role.h \
     ObjectModel/Person.h \
     ObjectModel/Viewbox.h \
+    ObjectModel/Generation.h \
+    ObjectModel/Invalidation.h \
     ObjectModel/SoftwareAssociation.h \
     ObjectModel/SoftwareAgent.h \
     ObjectModel/Entity.h \
