Prepared Krita plugin for data extraction.

--- a/krita/calligra-2.8.1/krita/plugins/extensions/artivity/CMakeLists.txt
+++ b/krita/calligra-2.8.1/krita/plugins/extensions/artivity/CMakeLists.txt
@@ -2,7 +2,7 @@ include_directories( ${KOMAIN_INCLUDES} ${KOTEXT_INCLUDES} )
 
 set(kritaartivity_PART_SRCS
         artivity.cc
-        log.cc
+#        log.cc
    )
 
 kde4_add_plugin(kritaartivity ${kritaartivity_PART_SRCS})
