--- a/Artivity.Explorer/Artivity.Explorer.csproj
+++ b/Artivity.Explorer/Artivity.Explorer.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Parsers\SvgStats.cs" />
     <Compile Include="Parsers\SvgStatsParser.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Controls\HeaderMenu.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
