Implemented export in Artivity Explorer. Implemented user settings in Artivity Explorer.

--- a/Artivity.Api.Model/Artivity.Api.Model.csproj
+++ b/Artivity.Api.Model/Artivity.Api.Model.csproj
@@ -78,6 +78,7 @@
     <None Include="Ontologies\nfo.rdf" />
     <None Include="Ontologies\xml.rdf" />
     <None Include="Ontologies\nie.rdf" />
+    <None Include="Ontologies\foaf.rdf" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
