--- a/Artivity.Api.Model/app.config
+++ b/Artivity.Api.Model/app.config
@@ -43,6 +43,10 @@
       <Ontology Uri="http://semiodesk.com/artivity/1.0/" Prefix="art">
         <FileSource Location="Ontologies/art.ttl"/>
       </Ontology>
+      
+      <Ontology Uri="http://xmlns.com/foaf/0.1/" Prefix="foaf">
+        <FileSource Location="Ontologies/foaf.rdf"/>
+      </Ontology>
     </OntologySettings>
 
     <VirtuosoStoreSettings>
@@ -56,6 +60,7 @@
             <Graph Uri="http://www.w3.org/2001/04/infoset#"/>
             <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/01/19/nie#"/>
             <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#"/>
+            <Graph Uri="http://xmlns.com/foaf/0.1/"/>
             <Graph Uri="http://semiodesk.com/artivity/1.0/"/>
           </Graphs>
         </RuleSet>
