Added DC elements ontology. Krita plugin delivers title of activity and active layer.

--- a/Artivity.Api.Client/src/Makefile.am
+++ b/Artivity.Api.Client/src/Makefile.am
@@ -45,4 +45,5 @@ nobase_pkginclude_HEADERS = artivity.h \
     Ontologies/xml.h \
     Ontologies/art.h \
     Ontologies/svg.h \
-    Ontologies/nfo.h
+    Ontologies/nfo.h \
+    Ontologies/dces.h
