--- a/Artivity.Api.Model/app.config
+++ b/Artivity.Api.Model/app.config
@@ -47,6 +47,10 @@
       <Ontology Uri="http://xmlns.com/foaf/0.1/" Prefix="foaf">
         <FileSource Location="Ontologies/foaf.rdf"/>
       </Ontology>
+      
+      <Ontology Uri="http://purl.org/dc/elements/1.1/" Prefix="dces">
+        <FileSource Location="Ontologies/dcelements.ttl"/>
+      </Ontology>
     </OntologySettings>
 
     <VirtuosoStoreSettings>
@@ -62,6 +66,7 @@
             <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#"/>
             <Graph Uri="http://xmlns.com/foaf/0.1/"/>
             <Graph Uri="http://semiodesk.com/artivity/1.0/"/>
+            <Graph Uri="http://purl.org/dc/elements/1.1/"/>
           </Graphs>
         </RuleSet>
       </RuleSets>
