--- a/Artivity.Explorer/packages.config
+++ b/Artivity.Explorer/packages.config
@@ -3,6 +3,7 @@
   <package id="dotNetRDF" version="1.0.9.3683" targetFramework="net40" />
   <package id="dotNetRDF.Data.Virtuoso" version="1.0.9.3683" targetFramework="net40" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net40" />
+  <package id="log4net" version="2.0.3" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net40" />
   <package id="OpenLink.Data.Virtuoso" version="6.2.3128.1" targetFramework="net40" />
   <package id="Semiodesk.Trinity.Core" version="0.9.93" targetFramework="net40" />
