--- a/Artivity.Api.Model/Artivity.Api.Model.csproj
+++ b/Artivity.Api.Model/Artivity.Api.Model.csproj
@@ -77,6 +77,7 @@
     <None Include="Ontologies\nie.rdf" />
     <None Include="Ontologies\foaf.rdf" />
     <None Include="app.config" />
+    <None Include="Ontologies\dcelements.ttl" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
