--- a/Artivity.Api.Model/Artivity.Api.Model.csproj
+++ b/Artivity.Api.Model/Artivity.Api.Model.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ObjectModel\Invalidation.cs" />
     <Compile Include="ObjectModel\EntityInfluence.cs" />
     <Compile Include="ObjectModel\Usage.cs" />
+    <Compile Include="ObjectModel\Dimensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Ontologies\prov.ttl" />
